--- a/SobreNos.html
+++ b/SobreNos.html
@@ -26,3 +26,66 @@
             <li><img src="shopping-cart.png"></li>
         </ul>
     </div>
+
+    <div id="banner">
+        <h1>Sobre Nós</h1>
+            <div id="capa">
+                <video src="Sobrenós.mp4" id="vid" autoplay loop muted></video>
+            </div>
+        </div>
+    </div>
+
+    <section>
+        <h1>Um pouco sobre quem somos</h1>
+
+        <picture>
+            <img src="relax.png">
+        </picture>
+
+        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eleifend augue non porta mattis. Suspendisse efficitur sollicitudin risus, sit amet interdum metus egestas ac. Nulla quam quam, vestibulum sit amet consectetur in, congue bibendum ante. Suspendisse lacus leo, pretium a velit ut, ullamcorper mollis orci. Suspendisse euismod, 
+            diam non maximus ornare, erat risus feugiat lectus, ac dapibus lectus massa non est. </span>
+
+        <p>Quisque ullamcorper vel mi nec suscipit. Sed mattis tellus justo, quis egestas eros tincidunt vel. Integer elementum, augue eget feugiat pharetra, ipsum purus euismod felis, a viverra ligula risus dignissim nunc.
+             Phasellus lorem metus, elementum sed mauris id, aliquet tempus augue</p>
+    </section>
+
+    <footer>
+        <div id="listas">
+            <div id="lista1">
+                <ul>
+                    <li class="quebra"><h2>Sua conta</h2></li>
+                    <li><a href="Login.html">Criar conta</a></li>
+                    <li><a href="Login.html">Login</a></li>
+                </ul>
+            </div>
+            
+            <div id="lista2">
+                <ul>
+                    <li class="quebra"><h2>Ajuda</h2></li>
+                    <li><a href="SobreNos.html">Sobre nós</a></li>
+                    <li><a href="NosContate.html">Nos contate</a></li>
+                </ul>
+            </div>
+
+            <div id="lista3">
+                <ul>
+                    <li class="quebra"><h2>Compre</h2></li>
+                    <li><a href="Shop.html">Sneakers</a></li>
+                    <li><a href="Shop2.html">Bonés</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="rede-icon">
+            <img src="Facebook.svg" id="face" class="rede-icon-tamanho">
+            <img src="Instagram.svg" id="insta" class="rede-icon-tamanho">
+            <img src="Tik Tok.svg" id="tk" class="rede-icon-tamanho">
+            <img src="Twitter.svg" id="tw" class="rede-icon-tamanho">
+            <img src="Whatsapp.svg" id="whats" class="rede-icon-tamanho">
+            <img src="Pinterest.svg" id="pin" class="rede-icon-tamanho">
+        </div>
+
+        <div id="copyright">
+            <p>Copyright © 2022 URB Inc. Todos os direitos reservados. URB Sneakers Ltda. CNPJ: xx-xxx-xxx/xxxx-xxx-xx</p>
+        </div>
+    </footer>
