--- a/Shop2.html
+++ b/Shop2.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="item">
-                <div class="imagem-grande" style="background-image: url(n4.webp);">
+                <div class="imagem-grande">
                 </div>
 
                 <span>
@@ -69,7 +69,7 @@
 
 
             <div class="item">
-                <div class="imagem-grande" style="background-image: url(n2.webp);">
+                <div class="imagem-grande">
                 </div>
 
                 <span>
@@ -95,7 +95,7 @@
             <!-- Linha1-->
 
             <div class="item">
-                <div class="img-normal" style="background-image: url(v1.webp);">
+                <div class="img-normal">
                 </div>
 
                 <span>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="item">
-                <div class="img-normal" style="background-image: url(v2.webp);">
+                <div class="img-normal">
                 </div>
 
                 <span>
@@ -120,7 +120,7 @@
 
 
             <div class="item">
-                <div class="img-normal" style="background-image: url(v3.webp);">
+                <div class="img-normal">
                 </div>
 
                 <span>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="item">
-                <div class="imagem-grande" style="background-image: url(v4.webp);">
+                <div class="imagem-grande">
                 </div>
 
                 <span>
@@ -146,7 +146,7 @@
             <!-- Linha2-->
 
             <div class="item">
-                <div class="imagem-grande" style="background-image: url(ad1.webp);">
+                <div class="imagem-grande">
                 </div>
 
                 <span>
@@ -160,7 +160,7 @@
 
 
             <div class="item">
-                <div class="imagem-grande" style="background-image: url(ad1.webp);">
+                <div class="imagem-grande">
                 </div>
 
                 <span>
@@ -172,7 +172,7 @@
             </div>
 
             <div class="item">
-                <div class="imagem-grande" style="background-image: url(ad1.webp)">
+                <div class="imagem-grande">
                 </div>
 
                 <span>
@@ -185,7 +185,7 @@
 
 
             <div class="item">
-                <div class="imagem-grande" style="background-image: url(ad1.webp);">
+                <div class="imagem-grande">
                 </div>
 
                 <span>
@@ -199,7 +199,7 @@
             <!-- Linha3-->
 
             <div class="item">
-                <div class="img-normal" style="background-image: url(all1.webp);">
+                <div class="img-normal">
                 </div>
 
                 <span>
@@ -213,7 +213,7 @@
 
 
             <div class="item">
-                <div class="img-normal" style="background-image: url(all2.webp);">
+                <div class="img-normal">
                 </div>
 
                 <span>
@@ -225,7 +225,7 @@
             </div>
 
             <div class="item">
-                <div class="img-normal" style="background-image: url(all3.webp);">
+                <div class="img-normal">
                 </div>
 
                 <span>
@@ -238,7 +238,7 @@
 
 
             <div class="item">
-                <div class="img-normal" style="background-image: url(all4.webp);">
+                <div class="img-normal">
                 </div>
 
                 <span>
