--- a/Shop2.html
+++ b/Shop2.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <span>
-                    <h3>Nike 1</h3>
+                    <h3>Cap 1</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -60,7 +60,7 @@
                 </div>
 
                 <span>
-                    <h3>Nike 2</h3>
+                    <h3>Cap 2</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -73,7 +73,7 @@
                 </div>
 
                 <span>
-                    <h3>Nike 3</h3>
+                    <h3>Cap 3</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -85,7 +85,7 @@
                 </div>
                
                 <span>
-                    <h3>Nike 4</h3>
+                    <h3>Cap 4</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -99,7 +99,7 @@
                 </div>
 
                 <span>
-                    <h3>Vans 1</h3>
+                    <h3>Cap 1</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -111,7 +111,7 @@
                 </div>
 
                 <span>
-                    <h3>Vans 2</h3>
+                    <h3>Cap 2</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -124,7 +124,7 @@
                 </div>
 
                 <span>
-                    <h3>Vans 3</h3>
+                    <h3>Cap 3</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -136,7 +136,7 @@
                 </div>
 
                 <span>
-                    <h3>Vans 4</h3>
+                    <h3>Cap 4</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -150,7 +150,7 @@
                 </div>
 
                 <span>
-                    <h3>Adidas 1</h3>
+                    <h3>Cap 1</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -164,7 +164,7 @@
                 </div>
 
                 <span>
-                    <h3>Adidas 2</h3>
+                    <h3>Cap 2</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -176,7 +176,7 @@
                 </div>
 
                 <span>
-                    <h3>Adidas 3</h3>
+                    <h3>Cap 3</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -189,7 +189,7 @@
                 </div>
 
                 <span>
-                    <h3>Adidas 4</h3>
+                    <h3>Cap 4</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -203,7 +203,7 @@
                 </div>
 
                 <span>
-                    <h3>Converse 1</h3>
+                    <h3>Cap 1</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -217,7 +217,7 @@
                 </div>
 
                 <span>
-                    <h3>Converse 2</h3>
+                    <h3>Cap 2</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -229,7 +229,7 @@
                 </div>
 
                 <span>
-                    <h3>Converse 3</h3>
+                    <h3>Cap 3</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
@@ -242,7 +242,7 @@
                 </div>
 
                 <span>
-                    <h3>Converse 4</h3>
+                    <h3>Cap 4</h3>
 
                     <h2>R$ 157,99</h2>
                 </span>
