--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <h1 class="Titulod">Estilo<span> Skatista</span></h1>
 
-            <p class="PDireita">aaaaa</p>
+            <p class="PDireita">Para você que gosta de algo mais atual, estilos jovens e para praticar skate. Bem usual para ir ao shopping e um modelo comun atualmente</p>
 
         </div>
 
@@ -70,7 +70,8 @@
 
             <h1 class="TituloE">Estilo<span> Esporte</span></h1>
 
-            <p class="PEsquerda">aaaaa</p>
+            <p class="PEsquerda">Ele é apropriado para as quadras de concreto ou quadras lisas, parecidas com aquelas quadras de basquete e vôlei comumente encontradas em ginásios, ou seja, 
+                são todas aquelas quadras que não são de grama ou de terra batida (saibro). Também tem modelos adequados para jogar em todas superfícies, até mesmo na grama e na terra batida.</p>
 
         </div>
 
@@ -82,7 +83,9 @@
 
             <h1 class="Titulod">Estilo<span> Converse</span></h1>
 
-            <p class="PDireita">aaaaa</p>
+            <p class="PDireita">A Converse sempre ultrapassou os limites do que um tênis pode fazer. Se você estava arremessando numa quadra de basquete, 
+                fazendo manobras de skate ou precisando de um par de tênis para sobreviver ao seu próximo show de rock,
+                a Converse estava lá com você.</p>
 
         </div>
 
@@ -94,7 +97,8 @@
 
             <h1 class="TituloE">Estilo<span> Casual</span></h1>
 
-            <p class="PEsquerda">aaaaa</p>
+            <p class="PEsquerda">Nada muito chamativo mas sem perder o estilo. É isso que este estilo oferece, caso você seja mais adulto e não quer perder
+            a formalidade este é o ideal para você</p>
 
         </div>
         <div id="cap" class="Tdisplay">
