--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https//db.onlinewebfonts.com/c/4c6d7b21f834a2dfdc2a50d2e8651ffb?family=CCSlaphappy" rel="stylesheet" type="text/css"/>
+    <link href="https//db.onlinewebfonts.com/c/0f26b3e18150776f5ced203524ea7573?family=Hanley+Pro+Sans" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="index.css" type="text/css"/>
   
     <title>URB - The sneaker vibe</title>
