--- a/SobreNos.html
+++ b/SobreNos.html
@@ -42,11 +42,11 @@
             <img src="relax.png">
         </picture>
 
-        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eleifend augue non porta mattis. Suspendisse efficitur sollicitudin risus, sit amet interdum metus egestas ac. Nulla quam quam, vestibulum sit amet consectetur in, congue bibendum ante. Suspendisse lacus leo, pretium a velit ut, ullamcorper mollis orci. Suspendisse euismod, 
-            diam non maximus ornare, erat risus feugiat lectus, ac dapibus lectus massa non est. </span>
+        <span>Nós giramos em torno de dar cada um o seu estilo que se adeque mais ou fique mais confortável. Para isso, acreditamos que seja necessário mentes criativas, 
+            corajosas, com vontade de arriscar mesmo que dê errado, afinal, as vezes é melhor tentar do que ficar se lamentando de não tentar! </span>
 
-        <p>Quisque ullamcorper vel mi nec suscipit. Sed mattis tellus justo, quis egestas eros tincidunt vel. Integer elementum, augue eget feugiat pharetra, ipsum purus euismod felis, a viverra ligula risus dignissim nunc.
-             Phasellus lorem metus, elementum sed mauris id, aliquet tempus augue</p>
+        <p>A atenção as necessidades atuais também é importante. Algo muito sério não é o que procuramos, mas também não faltamos com a responsabilidade. A idéia é ter metodologias
+        e idéias que cumpram suas funções mas sem deixar de lado a TRANQUILIDADE e o PRAZER de criar estilos.<p>
     </section>
 
     <footer>
