--- a/NosContate.html
+++ b/NosContate.html
@@ -22,7 +22,7 @@
 
             <ul id="menu-icon">
                 <li><a href="index.html"><img src="house.png"></a></li>
-                <li><a href="Login.html"><img src="user.png"></a></li>
+                <li><a href="pagCadastro.html"><img src="user.png"></a></li>
                 <li><img src="shopping-cart.png"></li>
             </ul>
         </div>
