--- a/CadastroProduto.html
+++ b/CadastroProduto.html
@@ -25,7 +25,7 @@
                 <div class="inputs" id="preco-produto">
                     <label>Preço do produto:</label>
                     <input class="inp" type="text" placeholder="R$" id="dinheiro" oninput="mascara_dinheiro_cifrao()" 
-                    onchange="mascara_dinheiro_virgula()" onkeyup="moeda(this)">
+                    onchange="mascara_dinheiro_virgula()">
                 </div>
                 
                 <content class="inputs" id="cod-produto">
